--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -311,7 +311,11 @@ the W3C RDF Data Shapes working group\footnote{\url{http://www.w3.org/2014/rds/c
 
 Within the DCMI task group, a collaboratively curated database of RDF validation requirements has been created which contains the findings of the working groups based on various case studies provided by data institutions \cite{BoschEckert2014}. It is publicly available and open for further contributions\footnote{Online at \url{http://purl.org/net/rdf-validation}}.
 
-The database connects requirements to use cases, case studies and implementations and forms the basis of this paper. To gain a better understanding about the role of certain requirements for data quality and in order to direct the further development of constraint languages, we collected constraints for commonly used vocabularies in the \emph{SBE} domain, either from the vocabularies themselves or from domain and data experts. All in all, this lead to TODO constraints on TODO vocabularies\tb{246 constraints on six vocabularies}. We let the experts classify the constraints according to the severity if they are violated. Furthermore, we classified the type of each constraint (corresponding to a requirement) based on its complexity ranging from types commonly found in vocabulary specifications (e.g., domain and range)\tb{and cardinality restrictions}, over types that are simply stated using common constraint languages (e.g., cardinality restrictions\tb{nein, nimm hier language tag cardinalities / cardinalty restrictions können formal in vokabularen spezifiert werden}) to complex types that involve complex data structures or need more sophisticated languages to be easily expressible (e.g., constraints on network topologies\tb{vielleicht besser: constraint on graph-based structures}).
+The database connects requirements to use cases, case studies and implementations and forms the basis of this paper. To gain a better understanding about the role of certain requirements for data quality and in order to direct the further development of constraint languages, we collected constraints for commonly used vocabularies in the \emph{SBE} domain, either from the vocabularies themselves or from domain and data experts. All in all, this lead to 246 constraints on six vocabularies. 
+We let the experts classify the constraints according to the severity if they are violated. Furthermore, we classified the type of each constraint (corresponding to a requirement) based on its complexity ranging from types commonly found in vocabulary specifications (e.g., domain, range, and cardinality restrictions), 
+over types that are simply stated using common constraint languages (e.g., language tag cardinality restrictions) to complex types that involve complex data structures or need more sophisticated languages to be easily expressible 
+%(e.g., constraints on network topologies)
+(e.g., constraints on graph-based structures}).
 
 As we do not want to base our conclusions on the evaluations of vocabularies and constraint definitions alone, we conducted a large-scale experiment and evaluated the data quality of 15,694 data sets (4,26 billion triples) of research data for the social, behavioural, and economic (\emph{SBE}) sciences obtained from 33 SPARQL endpoints.
 
@@ -654,7 +658,7 @@ We evaluated the (meta)data quality of large real world data sets represented by
 %i.e., individuals cannot be instances of multiple disjoint classes.
 It is a common requirement to narrow down the value space of properties by an exhaustive enumeration of valid values (\emph{R-30/37: allowed values}). 
 %\emph{Allowed values} (\emph{R-30, R-37}) for properties can be IRIs (matching one or multiple patterns), any literals, allowed literals (e.g. 'red' 'blue' 'green'), and typed literals of one or multiple type(s) (e.g. \emph{xsd:string}). 
-\emph{disco:CategoryStatistics}, e.g., can only have \emph{disco:computationBase} relationships to the values \emph{valid} and \emph{invalid} of the datatype \emph{rdf:langString}.
+\emph{disco:Category} \emph{Statistics}, e.g., can only have \emph{disco:computationBase} relationships to the values \emph{valid} and \emph{invalid} of the datatype \emph{rdf:langString}.
 %Validation should \emph{exploit sub-super relations} in vocabularies (\emph{R-224}).
 %If \emph{dcterms:coverage} and one of its sub properties (\emph{dcterms:spatial}, \emph{dcterms:temporal}) are given,
 %it is checked that \emph{dcterms:coverage} is not redundant with its sub-properties 
@@ -1170,16 +1174,16 @@ We validated
 4,178 / 477,737,281 (\emph{SKOS}), and 
 1,526 / 9,673,055 (\emph{Disco}) data sets / triples using our validation environment in batch mode.
 We validated, i.a., 
-(1) \emph{QB} data sets published by the \emph{Australian Bureau of Statistics (ABS)},
-the \emph{European Central Bank (ECB)}, and the
-\emph{Organisation for Economic Co-operation and Development (OECD)},
+(1) \emph{QB} data sets published by the \emph{Australian Bureau of Statistics},
+the \emph{European Central Bank}, and the
+\emph{Organisation for Economic Co-operation and Development},
 (2) \emph{SKOS} thesauri like the \emph{AGROVOC Multilingual agricultural thesaurus},
 the \emph{STW Thesaurus for Economics}, and the
-\emph{Thesaurus for the Social Sciences (TheSoz)}, and
-(3) \emph{Disco} data sets provided by the \emph{Microdata Information System (Missy)}, 
-the \emph{DwB Discovery Portal}, the
-\emph{Danish Data Archive (DDA)}, and the
-\emph{Swedish National Data Service (SND)}.
+\emph{Thesaurus for the Social Sciences}, and
+(3) \emph{Disco} data sets provided by the \emph{Microdata Information System}, 
+the \emph{Data Without Boundaries Discovery Portal}, the
+\emph{Danish Data Archive}, and the
+\emph{Swedish National Data Service}.
 We recently published a technical report\footnote{\label{technical-report-2}Available at: \url{http://arxiv.org/abs/1504.04478}} (serving as second appendix of this paper) 
 in which we describe the evaluation in detail \cite{BoschZapilkoWackerowEckert2015-2}. 
 As we evaluated nearly 10 thousand \emph{QB} data sets, we published the evaluation results for each data set in form of one document per SPARQL endpoint\footnote{Available at: \url{https://github.com/boschthomas/rdf-validation/tree/master/evaluation/data-sets/data-cube}}.
@@ -1278,7 +1282,7 @@ we only use normalized relative values representing the percentage of constraint
     \bottomrule
     \end{tabular}
     \\ \emph{C (constraints), CV (constraint violations)}
-    \caption{Constraints and Constraint Violations}
+    \caption{Constraints and constraint violations}
 		\label{tab:evaluation-constraint-violations}
     \end{center}
 \end{table}
@@ -1362,11 +1366,11 @@ For well-established vocabularies, data quality is high
 as serious violations rarely appear.
 For newly developed vocabularies, data quality is worse
 as serious violations occur partially.
-Constraints are serious when they violate the integrity of vocabularies.
-For well-established vocabularies, it is well documented and the experience is high how to guarantee this integrity.
-This is not the case or newly-developed vocabularies.
+%Constraints are serious when they violate the integrity of vocabularies.
+%For well-established vocabularies, it is well documented and the experience is high how to guarantee this integrity
+%which is not the case or newly-developed vocabularies.
 \begin{hyp}
-Especially for newly developed vocabularies, constraint languages should be used to a larger extend to meet severe constraints which guarantee their integrity.   
+Especially for newly developed vocabularies, constraint languages should be used to a larger extend to meet severe constraints.   
 \end{hyp} 
 
 %For the vocabularies \emph{Disco}, \emph{QB}, and \emph{SKOS}, we defined 213 constraints of 53 constraint types .
@@ -1473,7 +1477,7 @@ more than 3/4 of the \emph{simple constraints} are \emph{informational constrain
     \bottomrule
     \end{tabular}
     %\\ \emph{C (constraints), CT (constraint types)}
-    \caption{Complexity vs. Severity of Constraints}
+    \caption{Relation between complexity and severity level of constraints}
 		\label{tab:evaluation-complexity-severity}
     \end{center}
 \end{table}
@@ -1497,25 +1501,26 @@ there is an obvious need to develop constraint languages which enable to express
 %We determined the default \emph{severity level} for each constraint to indicate how serious the violation of the constraint is
 %and propose an extensible metric to measure the continuum of severity levels.
 
-\tb{sollen wir die beiden appendixe diese paper hier nochmals erwähnen?}
-
-\footnote{The first appendix of this paper describing each constraint in detail is available at: \url{http://arxiv.org/abs/1504.04479} \cite{BoschZapilkoWackerowEckert2015}}
-
-\footnote{The second appendix of this paper describing the evaluation in detail is available at: \url{http://arxiv.org/abs/1504.04478} \cite{BoschZapilkoWackerowEckert2015-2}.}
-
 %We implemented a validation environment (available at \url{http://purl.org/net/rdfval-demo}) to validate RDF data according to constraints expressed my arbitrary constraint languages and to ensure correct syntax and semantics of diverse vocabularies such as \emph{Disco}, \emph{QB}, \emph{SKOS}, and \emph{PHDD} (section \ref{implementation}).
 %We exhaustively evaluated the metadata quality of large real world aggregated (\emph{QB}), person-level (\emph{Disco}), and thesauri (\emph{SKOS}) data sets (more than 4.2 billion triples and 15 thousand data sets) by means of 213  constraints of the majority of the constraint types\footnote{The second appendix of this paper describing the evaluation in detail is available at: \url{http://arxiv.org/abs/1504.04478} \cite{BoschZapilkoWackerowEckert2015-2}.} (section \ref{evaluation}).
 
+We identified and published by today 82 types of constraints that are required by various stakeholders for data applications.
+In close collaboration with several SBE domain experts, we formulated 246 constraints\footnote{The first appendix of this paper describing each constraint in detail is available at: \url{http://arxiv.org/abs/1504.04479} \cite{BoschZapilkoWackerowEckert2015}}
+ of 53 different types on six different vocabularies (\emph{Disco}, \emph{QB}, \emph{SKOS}, \emph{PHDD}, \emph{DCAT}, \emph{XKOS}) and classified them according to the complexity level of their type and their severity level. 
+
+For 114 of these constraints, we evaluated\footnote{The second appendix of this paper describing the evaluation in detail is available at: \url{http://arxiv.org/abs/1504.04478} \cite{BoschZapilkoWackerowEckert2015-2}.}
+ the data quality of 15,694 data sets (4.26 billion triples) of research data for the \emph{SBE} sciences obtained from 33 SPARQL endpoints.
 Based on the evaluation results,
 we formulated several hypotheses to direct the further development of constraint languages.
 To make valid general statements for all vocabularies, however,
 the hypotheses still have to be verified or falsified
 by evaluating the quality of data represented by more than three vocabularies.
-The main hypotheses are 
-(1) The percentage of severe violations is very low, compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
-(2) A significant amount of 47\% of the violations refer to complex constraints that are not easily, concisely, and intuitively expressible by existing constraint languages which confirms the necessity to provide suitable constraint languages.
-(3) As a significant amount of 54\% of the constraints are either simple or complex constraints,
-the further development of constraint languages should concentrate on expressing simple and especially complex constraints which up to now in most cases can only be expressed by plain SPARQL. 
+The main hypotheses are: 
+(1) The percentage of severe violations is very low which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
+(2) The further development of constraint languages should concentrate on how to express \emph{complex constraints} as 44\% of all \emph{complex constraints} are also serious ones.
+(3) 47\% of the violations refer to complex constraints that are in most cases not expressible by existing constraint languages which confirms the necessity to provide suitable constraint languages.
+(4) As 54\% of the constraints are either \emph{simple} or \emph{complex constraints},
+the further development of constraint languages should concentrate on expressing \emph{simple} and especially \emph{complex constraints} which up to now in most cases can only be expressed by plain \emph{SPARQL}. 
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
