--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -374,7 +374,7 @@ allowing to perform calculations on the data.
 %\emph{Physical Data Description (PHDD)}\footnote{\url{https://github.com/linked-statistics/physical-data-description}} is a vocabulary to represent data in tabular format in RDF.\tb{tabular data} 
 %The data could be either represented in records with character-separated values (CSV) or in records with fixed length. 
 %Portals harvest metadata (as well as publicly available data) from multiple RDF data providers.
-\tb{To ensure high quality, data must satisfy certain criteria - specified in terms of RDF constraints.}
+%\tb{To ensure high quality, data must satisfy certain criteria - specified in terms of RDF constraints.}
 
 For more detailed analyses, researchers refer to person-level data including additional variables needed to answer subsequent research questions
 %Although not that common, the other direction is also possible, 
@@ -392,7 +392,7 @@ Variables are constructed out of values (of one or multiple datatypes) and/or co
 The variable \emph{age}, e.g., may be represented by values of the datatype \emph{xsd:nonNegativeInteger} or by a code list of age clusters (e.g., '0 to 10' and '11 to 20'). 
 
 A very important and representative RDF validation case study within SBE sciences is the comparison of variables between data collections of different countries.
-Several constraints on RDF data are checked for each data collection
+Several vocabulary-specific constraints on RDF data are checked for each data collection
 to determine if variables measuring \emph{age} 
 - collected for different countries (\emph{$age_{DE}$}, \emph{$age_{UK}$}) - 
 are comparable:
