--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -315,7 +315,7 @@ The database connects requirements to use cases, case studies and implementation
 We let the experts classify the constraints according to the severity if they are violated. Furthermore, we classified the type of each constraint (corresponding to a requirement) based on its complexity ranging from types commonly found in vocabulary specifications (e.g., domain, range, and cardinality restrictions), 
 over types that are simply stated using common constraint languages (e.g., language tag cardinality restrictions) to complex types that involve complex data structures or need more sophisticated languages to be easily expressible 
 %(e.g., constraints on network topologies)
-(e.g., constraints on graph-based structures}).
+(e.g., constraints on graph-based structures).
 
 As we do not want to base our conclusions on the evaluations of vocabularies and constraint definitions alone, we conducted a large-scale experiment and evaluated the data quality of 15,694 data sets (4,26 billion triples) of research data for the social, behavioural, and economic (\emph{SBE}) sciences obtained from 33 SPARQL endpoints.
 
@@ -535,16 +535,20 @@ which serve as typical entry points when searching for data.
 \section{Classification of Constraint Types and Constraints}
 \label{classification}
 
-Bosch et al. identified 82 requirements to formulate RDF constraints (e.g. \emph{R-75: minimum qualified cardinality restrictions}); each of them corresponding to an RDF constraint type\footnote{Constraint types and constraints are uniquely identified by alphanumeric technical identifiers like \emph{R-71-CONDITIONAL-PROPERTIES}}\cite{BoschNolleAcarEckert2015}. 
-We published a technical report\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} (serving as first appendix of this paper) in which we explain each requirement/constraint type in detail and give examples for each expressed by different constraint languages.
-The knowledge representation formalism \emph{Description logics (DL)}, with its  well-studied theoretical properties, provides the foundational basis for each constraint type.
-Therefore, this technical report contains mappings to \emph{DL} to logically underpin each requirement and to determine which \emph{DL} constructs are needed to express each constraint type \cite{BoschNolleAcarEckert2015}.
-%In total, we distinguish 82 RDF constraint types as we identified 6 RDF constraint types which are only necessary for validating particular vocabularies.
-We classified both RDF constraint types and RDF constraints to gain better insights into the quality of RDF data with respect to this classification, independent of the used vocabulary.
-%Constraints are instantiated from constraint types in order to validate both metadata and data represented by any vocabulary; thus, the proposed classification system is vocabulary-independent and therefore applicable generically.
-We recently published a technical report\footnote{\label{technical-report-1}Available at: \url{http://arxiv.org/abs/1504.04479}} (serving as second appendix of this paper) in which we describe 246 constraints of 53 distinct constraint types on six vocabularies \cite{BoschZapilkoWackerowEckert2015}.
+To gain better insights into the role that certain types of constraints play for the quality of RDF data, we use two simple classifications: on the one hand, we classify RDF constraint types according to their complexity and on the other hand, we classify concrete constraints formulated for a vocabulary according to the perceived severity of a violation. 
 
-\subsection{Classification of RDF Constraint Types}
+Within the working groups, we identified by today 82 requirements to formulate RDF constraints (e.g. \emph{R-75: minimum qualified cardinality restrictions}); each of them corresponding to an RDF constraint type\footnote{Constraint types and constraints are uniquely identified by alphanumeric technical identifiers like \emph{R-71-CONDITIONAL-PROPERTIES}}. 
+Within a technical report serving as first appendix of this paper we explain each requirement/constraint type in detail and give examples for each expressed by different constraint languages \cite{BoschNolleAcarEckert2015}. We provide mappings to representations in Description Logics (\emph{DL}) to logically underpin each requirement and to determine which \emph{DL} constructs are needed to express each constraint type.
+
+%In total, we distinguish 82 RDF constraint types as we identified 6 RDF constraint types which are only necessary for validating particular vocabularies.
+
+
+%Constraints are instantiated from constraint types in order to validate both metadata and data represented by any vocabulary; thus, the proposed classification system is vocabulary-independent and therefore applicable generically.
+
+The classification of the 246 concrete constraints on 6 vocabularies according to severity levels is published in a second technical report serving as second appendix of this paper \cite{BoschZapilkoWackerowEckert2015}.
+In the following, we summarize the results for the purpose of our evaluation.
+
+\subsection{Complexity of Constraint Types}
 
 According to the complexity of constraint types, the complete set of \emph{constraint types} encompasses three disjoint \emph{sets of constraint types}:
 \begin{enumerate}
@@ -555,10 +559,8 @@ According to the complexity of constraint types, the complete set of \emph{const
 
 The modeling languages \emph{RDF}, \emph{RDFS}, and \emph{OWL} are typically used to formally specify vocabularies.
 \emph{Vocabulary constraint types}
-denotes the set of constraint types whose constraints 
-can be extracted completely automatically out of formal specifications of vocabularies.
-As vocabularies have been specified using \emph{RDF}, \emph{RDFS}, and \emph{OWL},
-\emph{vocabulary constraints} ensure that the data is consistent with the intended syntaxes, semantics, and integrity of vocabularies' data models.
+denotes the set of constraint types that are commonly found for constraints within formal specifications of vocabularies, i.e., constraints that are formulated using \emph{RDFS} and common constructs of \emph{OWL}. We determined this set based on the evaluation of the six vocabularies. \emph{Vocabulary constraints} generally can be seen as a basic level of constraints ensuring that the data is consistent with the intended syntaxes, semantics, and integrity of vocabularies' data models.
+
 %The {\em existential quantification} (\emph{R-86}) 
 %\ms{Study $\equiv$ $\exists$ product.LogicalDataSet} (\emph{DL}), e.g., restricts studies to contain at least one data set which is expressible in OWL 2:
 \emph{Minimum qualified cardinality restrictions} (\emph{R-74}), e.g., guarantee that individuals of given classes are connected by particular properties to at least n different individuals/literals of certain classes or data ranges.
@@ -570,15 +572,16 @@ In \emph{PHDD}, a \emph{minimum qualified cardinality restriction} can be obtain
     owl:onClass Column ] .
 \end{ex}
 
-\emph{Simple} and \emph{complex constraints} are in contrast to \emph{vocabulary constraints} not explicitly defined within formal specifications of vocabularies.
-\emph{Simple} and \emph{complex constraints} are defined according to textual descriptions of the intended semantics of vocabularies.  
-\emph{Simple constraint types} is the set of constraint types whose constraints can be easily defined without much effort in addition to the already defined \emph{vocabulary constraints}.
-{\emph{Data property facets} (\emph{R-46}) is an example of a \emph{simple constraint type} which enables to declare frequently needed facets for data properties in order to validate input against simple conditions including min/max values, regular expressions, and string length.
+\emph{Simple} and \emph{complex constraints} are in contrast to \emph{vocabulary constraints} usually not (yet) explicitly defined within formal specifications of vocabularies. Instead, they are often defined in textual descriptions of the vocabularies. Additionally, we let our domain and data experts define constraints when they agreed that violating the constraint would affect the usefulness of the data.
+
+We further distinguished \emph{simple constraint types} as the set of constraint types whose constraints can be easily defined without much effort in addition to the already defined \emph{vocabulary constraints}.
+\emph{Data property facets} (\emph{R-46}) is an example of a \emph{simple constraint type} which enables to declare frequently needed facets for data properties in order to validate input against simple conditions including min/max values, regular expressions, and string length.
 The abstract of series/studies, e.g., should have a minimum length which is easily and concisely expressible by SPARQL: 
 \begin{ex}
 SELECT ?study WHERE {
     ?study dcterms:abstract ?abstract . FILTER ( STRLEN ( ?abstract ) = 10 ) . }
 \end{ex}
+For these constraints, we expect a straight-forward support in future constraint languages.
 
 \emph{Complex constraint types} encompass constraint types for which the definition of constraints is rather complex and cannot be derived from vocabulary definitions.
 For assessing the quality of thesauri, e.g., we concentrate on the graph-based structure and apply graph- and network-analysis techniques.
@@ -590,10 +593,9 @@ SELECT ?concept WHERE {
     FILTER NOT EXISTS { ?concept ?p ?o . 
         FILTER ( ?p IN ( skos:related, skos:relatedMatch, skos:broader, ... ) ) . }
 \end{ex}
-\emph{Complex constraints} are in most cases only expressible by plain \emph{SPARQL}
-which shows the importance to develop suitable constraint languages.
+\emph{Complex constraints} are today in most cases only expressible by plain \emph{SPARQL}. Depending on their usefulness, a support in constraint languages should be considered.
 
-\subsection{Classification of RDF Constraints}
+\subsection{Severity of Constraints}
 
 A concrete constraint is instantiated from one of the 82 constraint types and is defined for a specific vocabulary.
 It does not make sense to determine the severity of constraint violations of an entire constraint type,
@@ -1156,6 +1158,8 @@ restrict individuals of given classes to have properties defined within exactly 
 
 \section{Evaluation}
 \label{evaluation}
+
+For the evaluat
 
 \subsection{Experimental Setup}
 \label{implementation}
