--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -605,7 +605,7 @@ It does not make sense to determine the severity of constraint violations of an 
 as the severity of the violation of a given constraint depends on the individual context and vocabulary.
 %as the violation of one constraint may be severe,
 %whereas, the violation of another constraint of the same type may be minor.
-\emph{SBE} experts determined the default \textbf{\emph{severity level}} (\emph{R-158}) for each of the 246 constraints to indicate how serious the violation of the constraint is.
+\emph{SBE} experts determined the default \textbf{\emph{severity level}}\footnote{The possibility to define severity levels in vocabularies is in itself a requirement (\emph{R-158}) defined by the DCMI task group.} for each of the 246 constraints to indicate how serious the violation of the constraint is.
 %We propose an extensible metric to measure the continuum of severity levels ranging from \emph{informational} to \emph{error}.
 We use the commonly accepted classification of log messages in software development and distinguish \emph{informational}, \emph{warning} and \emph{error}.
 %According to the default severity level of constraints, the complete set of constraints encompasses three disjoint \emph{sets of constraints}:\ke{auch dieser satz macht keinen sinn für mich, ebensowenig wie die extrem erhellende auflistung, die gleich folgt... mein vorschlag von eben kann das komplett ersetzen.}
@@ -616,25 +616,23 @@ We use the commonly accepted classification of log messages in software developm
 %\end{itemize}
 Violations of \emph{informational constraints} point to desirable but not necessary data improvements to achieve RDF representations which are ideal in terms of syntax and semantics of used vocabularies. 
 %They are not seen as serious errors.
+\emph{Warnings} are syntactic or semantic problems which typically should not lead to an abortion of data processing.
 \emph{Errors} are syntactic or semantic errors which should cause the abortion of data processing. 
-\emph{Warnings} are syntactic or semantic errors which typically should not lead to an abortion of data processing.
 %Data not conforming to \emph{warning} and \emph{error constraints} is syntactically and/or semantically not correctly represented.
 %Data not conforming to \emph{warning constraints} but to \emph{error constraints} could be processed further.
 %Data not corresponding to \emph{error constraints}, however, cannot be processed further after validation. 
-As the purpose of \emph{vocabulary constraints} is to ensure explicitly stated semantics of vocabularies, 
-their default severity levels are in most cases very strong (\emph{error}) and 
-in average stronger than the severity levels of \emph{simple} and \emph{complex constraints}.
-As a consequence, violating many \emph{vocabulary constraints} is an indicator for bad (meta)data quality.
 
-Although, we provide default severity levels for each constraint, validation environments should enable users to adapt the severity levels of constraints according to their individual needs.
-Validation environments should enable users to select which constraints to validate against depending on their individual use cases.
-For some use cases, 
-validating \emph{vocabulary constraints} may be more important than validating \emph{simple} or \emph{complex constraints}.
-For other use cases,
-validating \emph{error constraints} may be sufficient without taking \emph{warning} and \emph{informational constraints} into account.
-We evaluated the (meta)data quality of large real world data sets represented by multiple and different vocabularies to get an understanding  
-(1) which sets of constraint types (on different levels of complexity) and 
-(2) which sets of constraints (associated with particular severity levels) encompass the constraints causing the most/fewest constraint violations (see section \ref{evaluation}).
+Note that there is a correlation between the severity of a constraint and the complexity of its type: vocabulary constraint are in most cases classified with an \emph{error} level as they typically represent basic and important constraints; there is a reason why they have been included in the vocabulary specification.
+
+% Although, we provide default severity levels for each constraint, validation environments should enable users to adapt the severity levels of constraints according to their individual needs.
+% Validation environments should enable users to select which constraints to validate against depending on their individual use cases.
+% For some use cases, 
+% validating \emph{vocabulary constraints} may be more important than validating \emph{simple} or \emph{complex constraints}.
+% For other use cases,
+% validating \emph{error constraints} may be sufficient without taking \emph{warning} and \emph{informational constraints} into account.
+% We evaluated the (meta)data quality of large real world data sets represented by multiple and different vocabularies to get an understanding  
+% (1) which sets of constraint types (on different levels of complexity) and 
+% (2) which sets of constraints (associated with particular severity levels) encompass the constraints causing the most/fewest constraint violations (see section \ref{evaluation}).
 
 %
 %- different sets of constraints for different use cases / use case specific constraints
